...
            }) {
                Image(systemName: "chevron.left")
                    .foregroundColor(.black)
                    .background(Color.clear)
            }
            .buttonStyle(BorderlessButtonStyle())
            .accessibilityIdentifier("date_left")
            
            ZStack {
                Text(dateFormat())
                    .font(.system(size: 14))
                DatePicker("", selection: $selectedDate, displayedComponents: [.date])
                    .environment(\.locale, Locale(identifier: "zh_Hant_TW"))
...
            }) {
                Image(systemName: "chevron.right")
                    .foregroundColor(.black)
                    .background(Color.clear)
            }
            .buttonStyle(BorderlessButtonStyle())
            .accessibilityIdentifier("date_right")
        }
    }
    
    func dateFormat() -> String {
        let formatter = DateFormatter()
        formatter.dateFormat = "dd / MM / yyyy"
...
