...
                
                Spacer()
                
                HStack {
                    PickerControlView()
                    
                    SegmentControlView(items: ["走勢圖", "數據表"])
                }
            }
        }
        
    }
    
...
